# ALPineFOREst

./: .gitignore  MethodTesting.ipynb  README.md  inducing_points.npy  pyproject.toml  r0full_mirrored+labeled_data.csv  r1_candidate_list_d4.npy  r1_candidate_list_d40.npy  update_version_number.sh
.ipynb_checkpoints/: MethodTesting-checkpoint.ipynb
alpfore/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
alpfore/.github/: ISSUE_TEMPLATE.md
alpfore/docs/: Makefile
alpfore/src/alpfore/: __init__.py
alpfore/src/alpfore/core/: evaluation.py
alpfore/src/alpfore/loaders/: lammps_loader.py
alpfore/tests/: __init__.py
archive/: ddG_SEMS_caslake.npy  ddGs_caslake.npy  r0_labeled_data.csv  r0full_top100cands_d4.npy  r0full_top100cands_d40.npy  strat_ts_cands_d40.npy  sys_encodings_caslake.npy
config/: encoder_config.json
docs/: alpfore.core.rst  alpfore.encoder.rst  alpfore.loaders.rst  alpfore.pipeline.rst  alpfore.utils.rst  conf.py  index.rst  make.bat  modules.rst
docs/_build/doctrees/: alpfore.candidate_selectors.doctree  alpfore.core.doctree  alpfore.doctree  alpfore.encoder.doctree  alpfore.evaluators.doctree  alpfore.loaders.doctree  alpfore.models.doctree  alpfore.pipeline.doctree  alpfore.trajectories.doctree  alpfore.utils.doctree  authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  usage.doctree  (+2 more)
src/alpfore/: __init__.py
tests/: test_alpfore.py  test_dataset_utils.py  test_ddG.py  test_dna_hybridization.py  test_kernel_utils.py  test_kernels.py  test_lammps_trajectory.py  test_pipeline.py  test_system_encoder.py  test_thompson_sampling.py  test_trainer.py
(+60 files in other folders)
