[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpfore"
version = "0.1.0"
description = "Active Learning Pipeline For Optimal Ranking Estimates"
readme = "README.rst"
authors = [
  {name = "Nicholas Herringer", email = "nherringer@uchicago.edu"}
]
maintainers = [
  {name = "Nicholas Herringer", email = "nherringer@uchicago.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/nherringer/alpfore/issues"
changelog = "https://github.com/nherringer/alpfore/blob/master/changelog.md"
homepage = "https://github.com/nherringer/alpfore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

